Added simple layout for all sections.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,6 @@ add_subdirectory(image/)
 add_latex_document(tym-cv.tex 
   DEPENDS tym-cv.cls 
   INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}/image
+  BIBFILES publications.bib
   FORCE_PDF
 )
